; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/netinet/extr_tcp_input.c_tcp_tfo_rcv_probe.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/netinet/extr_tcp_input.c_tcp_tfo_rcv_probe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tcpcb = type { i32*, i32 }

@TFO_PROBE_PROBING = common dso_local global i32 0, align 4
@TCPT_KEEP = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.tcpcb*, i32)* @tcp_tfo_rcv_probe to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @tcp_tfo_rcv_probe(%struct.tcpcb* %0, i32 %1) #0 {
  %3 = alloca %struct.tcpcb*, align 8
  %4 = alloca i32, align 4
  store %struct.tcpcb* %0, %struct.tcpcb** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %7, label %8

7:                                                ; preds = %2
  br label %21

8:                                                ; preds = %2
  %9 = load i32, i32* @TFO_PROBE_PROBING, align 4
  %10 = load %struct.tcpcb*, %struct.tcpcb** %3, align 8
  %11 = getelementptr inbounds %struct.tcpcb, %struct.tcpcb* %10, i32 0, i32 1
  store i32 %9, i32* %11, align 8
  %12 = load %struct.tcpcb*, %struct.tcpcb** %3, align 8
  %13 = load %struct.tcpcb*, %struct.tcpcb** %3, align 8
  %14 = call i32 @TCP_REXMTVAL(%struct.tcpcb* %13)
  %15 = call i32 @OFFSET_FROM_START(%struct.tcpcb* %12, i32 %14)
  %16 = load %struct.tcpcb*, %struct.tcpcb** %3, align 8
  %17 = getelementptr inbounds %struct.tcpcb, %struct.tcpcb* %16, i32 0, i32 0
  %18 = load i32*, i32** %17, align 8
  %19 = load i64, i64* @TCPT_KEEP, align 8
  %20 = getelementptr inbounds i32, i32* %18, i64 %19
  store i32 %15, i32* %20, align 4
  br label %21

21:                                               ; preds = %8, %7
  ret void
}

declare dso_local i32 @OFFSET_FROM_START(%struct.tcpcb*, i32) #1

declare dso_local i32 @TCP_REXMTVAL(%struct.tcpcb*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
